track with named pipes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,25 @@
 [package]
+edition = "2018"
 name = "tupinject"
 version = "0.1.0"
 authors = ["Arun Sivaramakrishnan <arun.sivaramakrishnan@gmail.com>"]
+# links = "detours"
 
 [lib]
 name = "tupinject"
 path = "lib/mod.rs"
-crate-type=["dylib"]
+crate-type=["cdylib"]
 
 [dependencies]
-detours-sys={version = "*"}
-widestring="0.4.0"
+named_pipe = "0.4.1"
+wstr = "*"
+# widestring="0.4.0"
 # lazy_static = "1.4.0"
-winapi = { version =  "0.3.6", features = ["winnt", "processthreadsapi", "fileapi", "winbase", "synchapi", "handleapi", "libloaderapi"] }
+winapi = { version =  "0.3.6", features = ["winnt", "processthreadsapi", "fileapi", "winbase", "synchapi", "handleapi", "libloaderapi", "errhandlingapi"] }
+# detours-sys={ version = "*", features = ["buildtime_bindgen"] }
+detours-sys = { git = "https://github.com/AlphaModder/detours-sys"}
 # kernel32-sys = ">=0.2.2"
 # advapi32-sys = "*"
 # ntapi = {version = "0.3.3"}
+# [target.tupspawn]
+# rustflags = "-ldetours"
