--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,7 @@ install:
 
 # build the release version for later distribution
 build_script:
-   - cargo build --release --target=%target%
+   - cargo build --release --target=%target% --verbose
 
 # Uses 'cargo test' to run tests and build. Alternatively, the project may call compiled programs
 #directly or perform other testing commands. Rust will automatically be placed in the PATH
