--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ path = "lib/mod.rs"
 crate-type=["cdylib"]
 
 [dependencies]
-named_pipe = "0.4.1"
-wstr = "*"
-winapi = { version =  "0.3.6", features = ["winnt", "processthreadsapi", "fileapi", "winbase", "synchapi", "handleapi", "libloaderapi", "errhandlingapi", "wow64apiset"] }
-detours-sys = {git = "https://github.com/DianaNites/detours", features = ["buildtime_bindgen"] }
-ntapi = "0.3.3"
+#named_pipe = "0.4.1"
+wchar = "0.11.0"
+winapi = { version =  "0.3.9", features = ["winnt", "processthreadsapi", "fileapi", "winbase", "synchapi", "handleapi", "libloaderapi", "errhandlingapi", "wow64apiset"] }
+detours-sys = {git = "https://github.com/svark/detours", features = ["buildtime_bindgen"] }
+ntapi = "0.3.6"
  
